[package]
name = "astraweave-profiling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Tracy profiling (feature-gated for zero-cost when disabled)
tracy-client = { version = "0.18", optional = true, default-features = false }

# Workspace dependencies
anyhow.workspace = true

[features]
default = []
# Enable Tracy profiling integration
profiling = ["tracy-client", "tracy-client/enable"]
# Enable Tracy sampling mode (lower overhead, 8KHz sampling)
profiling-sampling = ["profiling", "tracy-client/sampling"]
# Enable Tracy system tracing (GPU, memory, locks)
profiling-system = ["profiling", "tracy-client/system-tracing"]
# Full profiling with all features
profiling-full = ["profiling", "profiling-sampling", "profiling-system"]

[lib]
name = "astraweave_profiling"
path = "src/lib.rs"

[[test]]
name = "profiling_tests"
path = "tests/profiling_tests.rs"
required-features = ["profiling"]
